//
// Created by Kishchenko, Ivan on 11/11/21.
//

#pragma once

enum class ServiceId {
    APP,
    WIFI,
    MQTT,
    OLED,
    JOYSTICK,
    MAX_ID
};

